# planetary-rover-navigation

./: .gitignore  BLOG.md  Dockerfile  README.md  index.html  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  train.py  train_colab.ipynb
server/: app.py
